--- a/test.ipynb
+++ b/test.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -33,6 +19,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {
+        "id": "66oQPPp_Paj-"
+      },
+      "outputs": [],
       "source": [
         "# Perform necessary data preprocessing\n",
         "def preprocess_data(data):\n",
@@ -66,15 +57,15 @@
         "    sarima_model_fit = sarima_model.fit()\n",
         "    forecast = sarima_model_fit.forecast(steps=12)\n",
         "    return forecast"
-      ],
-      "metadata": {
-        "id": "66oQPPp_Paj-"
-      },
-      "execution_count": 25,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {
+        "id": "60TjiGJOPpK8"
+      },
+      "outputs": [],
       "source": [
         "# Streamlit app\n",
         "def main():\n",
@@ -111,19 +102,11 @@
         "    # Display the hourly forecast\n",
         "    st.write('Hourly Forecast:')\n",
         "    st.write(pd.DataFrame({'Forecast': forecast}, index=data.tail(4392).index))"
-      ],
-      "metadata": {
-        "id": "60TjiGJOPpK8"
-      },
-      "execution_count": 26,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if __name__ == '__main__':\n",
-        "    main()"
-      ],
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -131,11 +114,10 @@
         "id": "xD0pdK0RQD1p",
         "outputId": "621665c9-ef3a-40e8-ff34-c0bbf2bba044"
       },
-      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Shape of Data (105120, 1)\n",
             "<class 'pandas.core.frame.DataFrame'>\n",
@@ -149,7 +131,25 @@
             "138/138 [==============================] - 0s 2ms/step\n"
           ]
         }
+      ],
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    main()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
